--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_API_KEY="AIzaSyCmkKpASVfhUVw5BXSnFTvfqMjFMfbgfxM"
-TAVILY_API_KEY='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'
+GOOGLE_API_KEY=""
+TAVILY_API_KEY=""
